# Peroxidecast

./: Cargo.toml  README.md  config.toml
src/: api.rs  cli.rs  config.rs  main.rs  socket.rs  state.rs
src/net/: connector.rs  mod.rs  socket.rs
static/: index.html  index.js  style.css
