[package]
name = "webtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync"] }
futures-util = "0.3.21"
b64 = "0.4.0"
hyper = "0.14"