[package]
name = "webtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync", "time"] }
futures-util = "0.3.21"
b64 = "0.4.0"
httparse = "1.7.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5"
urlencoding = "2.1.0"
clap = { version = "3.1", features = ["derive"]}